# mendoza-101

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
mendoza-101/: .pre-commit-config.yaml  pyproject.toml
mendoza-101/madrid_notebooks/: CNN - inceptionV3  JoseMa (1).ipynb  CNN - inceptionV3 - (1).ipynb
mendoza-101/milan_notebooks/: thesis-101.ipynb
mendoza-101/tests/: test_mendoza_101.py
models/basemodel_LR/: baseline_log_reg_model_tensors_78.onnx  baseline_log_reg_model_tensors_78.pth
notebooks/madrid_notebooks/: CNN - inceptionV3  JoseMa (1).ipynb  CNN - inceptionV3 - (1).ipynb
tests/: test_mendoza_101.py
