[tool.poetry]
name = "mendoza-101"
version = "0.1.0"
description = ""
authors = ["guido <guid.castr@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.4"
sklearn = "^0.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
ipykernel = "^6.14.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
opencv-python = "^4.6.0"
PyYAML = "^6.0"
tqdm = "^4.64.0"
wandb = "^0.12.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
